name:                todoist-messenger
version:             0.1.0.0
homepage:            https://github.com/MarkusKL/todoist-messenger#readme
license:             MIT
license-file:        LICENSE
author:              Markus Krabbe Larsen
maintainer:          markus@krabbelarsen.dk
copyright:           2017 Markus Krabbe Larsen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable todoist-messenger-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todoist-messenger
                     , bytestring
                     , http-types
                     , wai
                     , warp
                     , aeson
                     , http-conduit
  default-language:    Haskell2010

test-suite todoist-messenger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todoist-messenger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MarkusKL/todoist-messenger
